# mcp-arduino-server

./: .env.example  .gitignore  Dockerfile  ESP32_TESTING_SUMMARY.md  Makefile  README.md  TESTING_FIXES_SUMMARY.md  docker-compose.yml  install.sh  pyproject.toml  run_tests.sh  test_circular_buffer_demo.py  test_deps.py  test_fixes.py  test_roots.py  test_roots_simple.py  test_serial_monitor.py
docs/: API_SUMMARY.md  CIRCULAR_BUFFER_ARCHITECTURE.md  CONFIGURATION.md  NEW_FEATURES.md  QUICK_START.md  README.md  SAMPLING_SUPPORT.md  SERIAL_INTEGRATION_GUIDE.md  SERIAL_MONITOR.md  TESTING_REPORT.md
scripts/: dev.py
src/mcp_arduino_server/: config.py  config_with_roots.py  server.py  server_enhanced.py  server_refactored.py  server_with_roots.py
src/mcp_arduino_server/components/: __init__.py  arduino_board.py  arduino_boards_advanced.py  arduino_compile_advanced.py  arduino_debug.py  arduino_libraries_advanced.py  arduino_library.py  arduino_serial.py  arduino_sketch.py  arduino_system_advanced.py  circular_buffer.py  client_capabilities.py  client_debug.py  example_sampling_usage.py  progress_example.py  serial_manager.py  serial_monitor.py  wireviz.py  wireviz_manager.py
tests/: __init__.py  conftest.py  test_arduino_board.py  test_arduino_debug.py  test_arduino_library.py  test_arduino_sketch.py  test_esp32_installation.py  test_esp32_integration_fastmcp.py  test_esp32_real_integration.py  test_esp32_unit_mock.py  test_integration.py  test_integration_fastmcp.py  test_integration_simple.py  test_wireviz.py
tests/examples/: test_circular_buffer_demo.py  test_serial_monitor.py  test_wireviz_sampling.py
